task file created

--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -37,16 +37,16 @@
         let sent = document.getElementById("payload");
         let recevied = document.getElementById("received");
 
-        brokerBtn.addEventListener("click", function() {
+        brokerBtn.addEventListener("click", function () {
 
             const body = {
                 method: 'POST',
             }
 
-            fetch("http:\/\/localhost:8080", body)
+            fetch("http:\/\/localhost:8083", body)
                 .then((response) => response.json())
                 .then((data) => {
-                    sent.innerHTML ="empty post request";
+                    sent.innerHTML = "empty post request";
                     received.innerHTML = JSON.stringify(data, undefined, 4);
                     if (data.error) {
                         console.log(data.message);
@@ -55,7 +55,7 @@
                     }
                 })
                 .catch((error) => {
-                    output.innerHTML += "<br><br>Eror: " + error;
+                    output.innerHTML += "<br><br>Error: " + error;
                 })
         })
 
